--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "inquirer": "^9.2.18",
+    "morgan": "^1.10.0",
     "qr-image": "^3.2.0",
     "qrcode": "^1.5.3",
     "sillyname": "^0.1.0",
